# discordbot-rs

./: Cargo.toml
src/: main.rs
