[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_lex = "0.5.0"
dotenvy = "0.15.7"
infer = "0.13.0"
magick_rust = "0.18.0"
reqwest = "0.11.18"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
